--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ nav .fa-bars {
 
 /* curriculum section */
 .curriculum {
-  background: url(assets/bg.png), linear-gradient(to top, white, #f7f7f7);
+  background: url(assets/bg.png), linear-gradient(to top, rgb(241, 243, 255), #e4f0ff);
   background-repeat: no-repeat;
 }
 .curriculum .container {
@@ -151,16 +151,16 @@ nav .fa-bars {
   border: solid 1px;
 }
 .curriculum .card-container .card:nth-child(1) {
-  background: linear-gradient(to bottom, #def5ff, white 40%);
-  border-color: #def5ff;
+  background: linear-gradient(to bottom, #b6e9ff, white 40%);
+  border-color: #6bc4ea;
 }
 .curriculum .card-container .card:nth-child(2) {
-  background: linear-gradient(to bottom, #fff4dc, white 40%);
-  border-color: #fff4dc;
+  background: linear-gradient(to bottom, #93ffe1, white 40%);
+  border-color:#e6faf5;
 }
 .curriculum .card-container .card:nth-child(3) {
-  background: linear-gradient(to bottom, #eee1ff, white 40%);
-  border-color: #eee1ff;
+  background: linear-gradient(to bottom, #ffbaba, white 40%);
+  border-color: #ffd4d4;
 }
 .curriculum .card-container .card img {
   width: 136px;
